@@ -7,10 +7,10 @@ Forwarded: not-needed
 --- a/requirements.txt
 +++ b/requirements.txt
 @@ -18,7 +18,6 @@
- netaddr!=0.7.16,>=0.7.12
- python-neutronclient>=2.6.0
+ netaddr!=0.7.16,>=0.7.12 # BSD
+ python-neutronclient>=2.6.0 # Apache-2.0
  retrying!=1.3.0,>=1.2.3 # Apache-2.0
--ryu>=3.23.2 # Apache-2.0
- SQLAlchemy<1.1.0,>=0.9.9
- WebOb>=1.2.3
- python-keystoneclient!=1.8.0,>=1.6.0
+-ryu!=3.29,>=3.23.2 # Apache-2.0
+ SQLAlchemy<1.1.0,>=1.0.10 # MIT
+ WebOb>=1.2.3 # MIT
+ keystoneauth1>=2.1.0 # Apache-2.0
